--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ discord==1.7.3
 discord.py==1.7.3
 embed==0.1.0
 idna==3.2
+idna-ssl==1.1.0
 multidict==5.1.0
 pafy==0.5.5
 pycparser==2.20
@@ -18,4 +19,5 @@ six==1.16.0
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 yarl==1.6.3
-youtube-dl==2021.6.6
+youtube-dl==2021.12.17
+
