--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==21.2.0
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
-charset-normalizer==2.0.4
-discord==1.7.3
-discord.py==1.7.3
-embed==0.1.0
-idna==3.2
-idna-ssl==1.1.0
-multidict==5.1.0
-pafy==0.5.5
-pycparser==2.20
-PyNaCl==1.4.0
-requests==2.26.0
-six==1.16.0
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-yarl==1.6.3
+aiohttp
+async-timeout
+attrs
+certifi
+cffi
+chardet
+charset-normalizer
+discord
+discord.py
+embed
+idna
+idna-ssl
+multidict
+pafy
+pycparser
+PyNaCl
+requests
+six
+typing-extensions
+urllib3
+yarl
 youtube-dl
+ffmpeg
